settings/routings/contour-ingress-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: contour-ingress-headless
  namespace: ingress-system
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: dapr-htp
    port: 3500
  - name: dapr-grpc
    port: 50001
  - name: dapr-metrics
    port: 9090
  selector:
    app.kubernetes.io/component: envoy
    app.kubernetes.io/instance: ingress-contour
    app.kubernetes.io/name: contour
