settings/routings/http-proxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: aggregator
  namespace: web
spec:
  virtualhost:
    fqdn: aggregator.${DOMAIN_NAME}
    tls:
      secretName: aggregator
  routes:
    - services:
      - name: aggregator
        port: 8080
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: aks-helloworld
  namespace: default
spec:
  virtualhost:
    fqdn: aks-helloworld.${DOMAIN_NAME}
  includes:
  - name: default-web
    namespace: default
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: default-web
  namespace: default
spec:
  routes:
    - services:
      - name: aks-helloworld
        port: 80
